src/GUI/Theme/Styles.css
/* See more information about Qt .css syntax in documentation */
/* 1. https://doc.qt.io/qt-5/stylesheet-syntax.html */
/* 2. https://doc.qt.io/qt-5/stylesheet-reference.html */
/* 3. https://forum.qt.io/topic/40151/solved-scaled-background-image-using-stylesheet/3 */

/* Global style setting */
*
{
    font-family: Calibri;
    font-size: 10pt;
    color: black;
}

QComboBox
{
    width: 70px;
    color: white;
    background-color: #2e39b3;
    
    border-style: outset;
    border-width: 2px;
    border-color: #b1b7ff;
    border-radius: 3px;
}

QComboBox:checked
{
    background-color: #3543e7;
    color: #baff0c;
}

QComboBox QAbstractItemView
{
    border-width: 2px;
    border-radius: 3px;
    border-style: outset;
    border-color: #b1b7ff;
    color: white;
    background-color: #242c88;
    selection-background-color: #3543e7;
}

QComboBox::drop-down
{
     width: 15px;
     color: white;
     border-color: #b1b7ff;
     border-radius: 3px;
     padding-left: 10px;
}

QComboBox::down-arrow
{
    image: url(Resources/Theme/ScrollArrowDown.webp);
}

QComboBox::up-arrow
{
    image: url(Resources/Theme/ScrollArrowUp.webp);
}

/* Start widget style setting */
LoadDialog, LaunchWidget, CreationDialog
{
    border-image: url(Resources/Theme/StartMenuBackground.webp) 0 0 0 0 stretch stretch;
    background-color: black;
}

BaseConfigurationDialog QPushButton
{
    padding-left: 30px;
    padding-right: 30px;
}

GreetingWidget QPushButton
{
    font-family: Calibri;
    font-weight: bold;
    font-size: 18pt;
    color: white;

    background-color: #181d5a;
    padding: 10px;

    border-style: outset;
    border-width: 2px;
    border-color: #b1b7ff;
    border-radius: 3px;
}

LoadDialog QPushButton, CreationDialog QPushButton
{
    font-family: Calibri;
    font-weight: bold;
    padding: 10px;
    
    color: white;
    background-color: #181d5a;
    
    border-style: outset;
    border-width: 2px;
    border-color: #b1b7ff;
    border-radius: 3px;
}

GreetingWidget QLabel,       LoadDialog QLabel,       CreationDialog QLabel, 
GreetingWidget QRadioButton, LoadDialog QRadioButton, CreationDialog QRadioButton, 
GreetingWidget QCheckBox,    LoadDialog QCheckBox,    CreationDialog QCheckBox
{
    color: white;
}

GreetingWidget QPushButton:hover, LoadDialog QPushButton:hover, CreationDialog QPushButton:hover
{
    background-color: #3543e7;
    color: #baff0c;
}

QPushButton#btnReview
{
    padding-top: 2px;
    padding-bottom: 2px;
}

/* Main editor window style settings */
HotkeysMainWindow
{
    border-image: url(Resources/Theme/EditorBackgroundWithPicture.webp) 0 0 0 0 stretch stretch;
    background-color: black;
}

HotkeysMainWindow QPushButton
{
    font-family: Calibri;
    font-weight: bold;
    padding: 10px;
    
    background-color: #181d5a;
    color: white;
    
    border-style: outset;
    border-width: 2px;
    border-color: #b1b7ff;
    border-radius: 3px;
}

HotkeysMainWindow QPushButton:hover
{
    background-color: #3543e7;
    color: #baff0c;
}

HotkeysMainWindow QPushButton:pressed
{
    background-color: #3543e7;
    color: white;
}

HotkeysMainWindow QPushButton:pressed:hover
{
    background-color: #3543e7;
    color: #baff0c;
}

HotkeysMainWindow QTreeWidget, HotkeysMainWindow QTabWidget, HotkeysMainWindow QScrollArea
{
    background: rgba(0, 0, 0, 0.7);
    border-radius: 3px;
    border-width: 1px;
    border-style: outset;
    border-color: white;
    
    color: white;
}

QScrollArea[keyboard="true"]
{
    border-image: url(Resources/Theme/Keyboard.webp) 0 0 0 0 stretch stretch;   
}

QTreeWidget::item
{
    min-height: 40px;
    font-family: "Collibri";
    font-size: 9pt;
}

QTreeWidget::branch:open:has-children
{
    background-image: url(Resources/Theme/DropArrowDown.webp);
}

QTreeWidget::branch:closed:has-children
{
    background-image: url(Resources/Theme/DropArrowRight.webp);
}

QTabWidget QWidget
{
    background: rgba(0, 0, 0, 0);
    color: white;
    border: none; 
}

QTabWidget::pane
{
    background: rgba(0, 0, 0, 0);
    color: white;
    border: none;
}

QTabBar::tab
{
    background: rgba(0, 0, 0, 0);
    height: 30px;
    width: 120px;
    color: white;

    border-bottom-width: 1px;
    border-bottom-style: outset;
    border-bottom-color: white;
}

QTabBar::tab:first
{
    border-right-width: 1px;
    border-right-style: outset;
    border-right-color: white;
}

QTabBar::tab:selected
{
    border-right-width: 1px;
    border-right-style: outset;
    border-right-color: white;
    
    background: #3543e7;
}

QTabBar::tab:selected:hover, QTabBar::tab:hover
{
    color: #baff0c;
}

QTabBar::tab:last
{
    border-bottom-right-radius: 3px;
    border-right-width: 1px;
    border-right-style: outset;
    border-right-color: white;
}

QScrollBar
{
    background: rgba(0, 0, 0, 0);
}

QScrollBar::handle
{
    background: white;
    border-radius: 1px;
}

QScrollBar::add-line, QScrollBar::sub-line, 
QScrollBar::up-arrow, QScrollBar::down-arrow,
QScrollBar::add-page, QScrollBar::sub-page
{
    background: none;
}

QDialog
{
    border-image: url(Resources/Theme/StartMenuBackground.webp) 0 0 0 0 stretch stretch;
    background-color: black;
}

QDialog QLabel
{
    margin: 40px 40px 40px 40px;
    color: white;
}

QDialog QPushButton
{
    margin-bottom: 40px;
}

/* Maybe useful in future */
/* HotkeysMainWindow QMenu
{
    background: rgba(0, 0, 0, 0);
    color: white;
    border: none; 
} */

HotkeysMainWindow QLabel#HotkeyLabel:disabled
{
    padding-left: 30px;
    padding-right: 30px;
    background-color: #128d2d;
}

HotkeysMainWindow QLabel#HotkeyLabel:enabled
{
    padding-left: 30px;
    padding-right: 30px;
    background-color: #cb0d27;
}

